deploy/.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-ma-lesson-6-deployment
  labels:
    app: otus-ma-lesson-6
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-ma-lesson-6
  template:
    metadata:
      labels:
        app: otus-ma-lesson-6
    spec:
      containers:
        - name: otus-ma-lesson-6
          image: kvmayer/otus-ma-lesson-6:0.1.5
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
          command:
            - /app/server
            - -web
          livenessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
