deploy/.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-ma-lesson-6-service
spec:
  selector:
    app: otus-ma-lesson-6
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
